# ox-ipc-proxy

./: CMakeLists.txt  README.md  THIRD-PARTY-LICENSES.md
src/: ipc_client.cpp  ipc_server.cpp  messages.h  shared_memory.h
src/backend/: backend_exports.cpp  ipc_server.cpp  ipc_server.h
src/common/: control_channel.h  messages.h  shared_memory.h  util.h
src/frontend/: driver_frontend.cpp  ipc_client.cpp  ipc_client.h
tests/: CMakeLists.txt  common.hpp  test_frame.cpp  test_input.cpp  test_lifecycle.cpp  test_metadata.cpp  test_session.cpp
